src/main/java/com/example/dailyschedule/error/CustomException.java
package com.example.dailyschedule.error;

import com.example.dailyschedule.error.type.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}
